--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "foobar": "^1.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "sqlite3": "^3.13.0",
     "serve-favicon": "~2.3.0"
   }
 }
